# basalt-headers

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Doxyfile  README.md
cmake_modules/: PreProjectWorkarounds.cmake
doc/: mainpage.dox
include/basalt/calibration/: calib_bias.hpp  calibration.hpp
include/basalt/camera/: bal_camera.hpp  camera_static_assert.hpp  double_sphere_camera.hpp  extended_camera.hpp  fov_camera.hpp  generic_camera.hpp  kannala_brandt_camera4.hpp  pinhole_camera.hpp  stereographic_param.hpp  unified_camera.hpp
include/basalt/image/: image.h  image_pyr.h
include/basalt/imu/: imu_types.h  preintegration.h
include/basalt/serialization/: eigen_io.h  headers_serialization.h
include/basalt/spline/: ceres_local_param.hpp  ceres_spline_helper.h  rd_spline.h  se3_spline.h  so3_spline.h  spline_common.h
include/basalt/utils/: assert.h  eigen_utils.hpp  image.h  sophus_utils.hpp
scripts/: clang-format-all.sh
test/: CMakeLists.txt
test/include/: test_utils.h
test/src/: benchmark_camera.cpp  test_camera.cpp  test_ceres_spline_helper.cpp  test_image.cpp  test_preintegration.cpp  test_sophus.cpp  test_spline.cpp  test_spline_se3.cpp
